<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/border_dialog_tareas"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:text="@string/dialog_title" />

    <EditText
        android:id="@+id/etTitulo"
        style="@style/dialog_tarea_item"
        android:hint="@string/title_element"
        tools:text="Titulo" />

    <EditText
        android:id="@+id/etFecha"
        style="@style/dialog_tarea_item"
        android:hint="@string/date_element_dialog" />

    <EditText
        android:id="@+id/etDescripcion"
        style="@style/dialog_tarea_item"
        android:hint="@string/description_element" />

    <Button
        android:id="@+id/btnDialogTarea"
        style="@style/btn_styles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_element" />
</LinearLayout>