<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentRegistro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="30dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tvTituloRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/title_register"
                style="@style/ThemeOverlay.MyTitleText"
                />

            <TextView
                android:id="@+id/pedirCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/require_mail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTituloRegistro"
                android:layout_marginTop="40dp"
                />
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pedirCorreo"
                android:hint="@string/hint_email"
                style="@style/modifiedEditText"
                />

            <TextView
                android:id="@+id/pedirNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/require_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmail"
                android:layout_marginTop="40dp"
                />
            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pedirNombre"
                android:hint="@string/hint_name"
                style="@style/modifiedEditText"
                />

            <TextView
                android:id="@+id/pedirEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/require_age"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etNombre"
                android:layout_marginTop="40dp"
                />
            <EditText
                android:id="@+id/etEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pedirEdad"
                android:inputType="number"
                android:hint="@string/hint_age"
                style="@style/modifiedEditText"
                />

            <TextView
                android:id="@+id/pedirPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/require_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEdad"
                android:layout_marginTop="40dp"
                />
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pedirPassword"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                style="@style/modifiedEditText"
                />

            <TextView
                android:id="@+id/pedirRepetirPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/require_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPassword"
                android:layout_marginTop="40dp"
                />
            <EditText
                android:id="@+id/etRepetirPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pedirRepetirPassword"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                style="@style/modifiedEditText"
                />

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etRepetirPassword"
                android:layout_marginTop="20dp"
                android:text="@string/title_register"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
